# idkwhatimdoing

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/include/: app.hpp  testapp.hpp
app/src/: app.cpp  testapp.cpp
engine/: CMakeLists.txt  window.cpp
engine/include/kat/: app.hpp  engine.hpp  entry_point.hpp  exec_context.hpp  fwd.hpp  window.hpp
engine/src/kat/: app.cpp  engine.cpp  exec_context.cpp
