# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("katengine")

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

# Include sub-projects.
add_subdirectory ("engine")
add_subdirectory ("app")

set_target_properties(katengine app PROPERTIES CXX_STANDARD 20)
set_target_properties(katengine app PROPERTIES CXX_STANDARD_REQUIRED TRUE)